src/FinancialForce Accounting/objects/codaEventLog__c.object
<CustomObject>
    <description>Records when an invoice or credit note was printed or sent by email, and who printed/sent it.</description>
    <fields>
        <fullName>CreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note</label>
        <referenceTo>codaCreditNote__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>EventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>EventLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Event Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>